--- a/css-layout-classes/styles.css
+++ b/css-layout-classes/styles.css
@@ -9,27 +9,25 @@
 }
 
 .row {
-  height: calc(100%/6);
-  width: 60vw;
   display: flex;
 }
 
 img {
-  width: 100%;
+  flex-basis: 100%;
 }
 
 .column-quarter {
-  width: 25%;
+  flex-basis: 25%;
 }
 
 .column-third {
-  width: calc(100%/3);
+  flex-basis: calc(100%/3);
 }
 
 .column-half {
-  width: calc(100%/2);
+  flex-basis: calc(100%/2);
 }
 
 .column-two-thirds {
-  width: calc((100%/3) *2);
+  flex-basis: calc((100%/3) *2);
 }
