--- a/css-two-column-layout/styles.css
+++ b/css-two-column-layout/styles.css
@@ -12,35 +12,32 @@
   display: flex;
 }
 
+.col-20 {
+  width: 40%;
+}
+
 .col-50 {
   width: 50%;
-  display: flex;
-  flex-wrap: wrap;
+  margin: 0 auto;
 }
 
 .col-80 {
   width: 60%;
 }
 
+.col-90 {
+  width: 90%;
+}
+
 .col-100 {
   width: 100%;
-}
-
-.med-card {
-  width: 50%;
-}
-
-.med-info {
-  background-color: red;
-  display: flex;
-  flex-wrap: wrap;
 }
 
 button {
   color: #b14742;
   border: 1px solid #b14742;
   background-color: white;
-  width: 175px;
+  width: 125px;
   height: 30px;
   font-weight: bold;
 }
@@ -63,4 +60,16 @@ button {
 
 .inline {
   display: inline;
+}
+
+.fw {
+  flex-wrap: wrap;
+}
+
+.fs-12 {
+  font-size: 12px;
+}
+
+img {
+  width: 100%;
 }
