--- a/css-canvas-medical/styles.css
+++ b/css-canvas-medical/styles.css
@@ -12,8 +12,16 @@
   background-color: red;
 }
 
+.col-fba {
+  flex-basis: auto;
+}
+
 .col-10 {
   width: 10%;
+}
+
+.col-15 {
+  width: 15%;
 }
 
 .col-20 {
@@ -139,5 +147,9 @@ button {
 }
 
 .row-padding {
-  padding: 20px 50px;
+  padding: 15px 50px;
+}
+
+.bottom-border-gray {
+  border-top: 1px solid #e7e9ec;z
 }
