--- a/javascript-modal/styles.css
+++ b/javascript-modal/styles.css
@@ -20,9 +20,17 @@
   width: calc(100% / 3);
 }
 
+.col-40 {
+  width: 40%;
+}
+
 .col-100 {
   height: 100vh;
   width: 100%;
+}
+
+.ta-center {
+  text-align: center;
 }
 
 button {
@@ -36,9 +44,43 @@ button {
   color: white;
   font-weight: bold;
   border-radius: 5px;
-  position: absolute;
+}
+
+button:hover {
+  cursor: pointer;
 }
 
 .overlay {
-  background-color: rgb(77 77 77 / 20%);
+  background-color: rgb(27 27 27 / 90%);
+  position: absolute;
+
+  /* display: none; */
+}
+
+.popup {
+  background-color: white;
+  height: 350px;
+  width: 600px;
+  margin: 0 auto;
+  border-radius: 5px;
+}
+
+p {
+  font-size: 36px;
+  text-align: center;
+  font-family: sans-serif;
+  font-weight: bold;
+}
+
+.popup-button {
+  background-color: #eb5d5d;
+  font-size: 28px;
+}
+
+.hidden {
+  display: none;
+}
+
+.visible {
+  display: block;
 }
