--- a/javascript-modal/styles.css
+++ b/javascript-modal/styles.css
@@ -25,12 +25,15 @@
 }
 
 .col-100 {
-  height: 100vh;
   width: 100%;
 }
 
 .ta-center {
   text-align: center;
+}
+
+.ai-center {
+  align-items: center;
 }
 
 button {
@@ -83,4 +86,16 @@ p {
 
 .visible {
   display: block;
+}
+
+.h-100vh {
+  height: 100vh;
+}
+
+.h-100p {
+  height: 100%;
+}
+
+.m-40 {
+  margin: 40px 0;
 }
