--- a/javascript-typing-tutor/styles.css
+++ b/javascript-typing-tutor/styles.css
@@ -77,3 +77,17 @@ p {
   font-size: 35px;
   font-weight: bold;
 }
+
+button {
+  border: 5px solid white;
+  height: 60px;
+  width: 225px;
+  font-size: 28px;
+  font-weight: bold;
+  border-radius: 5px;
+  margin: 20px;
+}
+
+.hidden {
+  display: none;
+}
