--- a/object-manipulation-3/styles.css
+++ b/object-manipulation-3/styles.css
@@ -4,7 +4,7 @@
 }
 
 .container {
-  max-width: 100vw;
+  max-width: 3000px;
   margin: 0 auto;
 }
 
@@ -153,17 +153,33 @@ column classes
   font-size: 28px;
 }
 
+.fs-45 {
+  font-size: 45px;
+}
+
+.fs-60 {
+  font-size: 60px;
+}
+
+.inline {
+  display: inline;
+}
+
+.m-10 {
+  margin: 50px 0;
+}
+
 p {
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-  font-size: 60px;
   color: white;
+  white-space: pre;
 }
 
 button {
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   font-size: 50px;
-  height: 100px;
-  width: 300px;
+  height: 105px;
+  width: 325px;
   color: white;
   background-color: rgb(84 114 212);
   border-radius: 30px;
