--- a/object-manipulation-3/styles.css
+++ b/object-manipulation-3/styles.css
@@ -195,3 +195,11 @@ button:active {
   transform: translateY(5px);
   box-shadow: 0 7px rgb(119 119 119);
 }
+
+img {
+  position: absolute;
+  top: 30vh;
+  width: 500px;
+  height: 500px;
+  object-fit: contain;
+}
